@@ -292,8 +292,11 @@ class FinderTest < Test::Unit::TestCase
   end
 
   def test_find_all_with_join
-    developers_on_project_one = Developer.find :all, :joins => 'developers_projects', :conditions => 'id=developer_id AND project_id=1'
-
+    developers_on_project_one = Developer.find(
+      :all, 
+      :joins => 'LEFT JOIN developers_projects ON developers.id = developers_projects.developer_id', 
+      :conditions => 'project_id=1'
+    )
     assert_equal 2, developers_on_project_one.length
     developer_names = developers_on_project_one.map { |d| d.name }
     assert developer_names.include?('David')
